--- a/src/component/css/Services.css
+++ b/src/component/css/Services.css
@@ -1,9 +1,9 @@
 /* src/components/About.css */
 
 .content-wrapper {
-  max-width: 95vw;
-  margin: 0 auto;
-  padding: 1rem;
+  max-width: 100%;
+  margin: 0 0;
+  padding: 0 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -106,11 +106,13 @@
 
 /* General Services Section */
 .servicesPage-section {
-  padding: 10px 20px;
-  max-width: 1200px;
-  margin-bottom: 20px;
+  padding: 50px 10px;
+  max-width: 100%;
+  margin: auto;
   text-align: center;
+  background-color: var(--light);
 }
+
 
 .servicesPage-section h2 {
   margin-bottom: 2rem;
@@ -180,24 +182,27 @@
 }
 
 .servicePage-card:hover {
-  transform: translateY(-8px);
-  transition: transform 0.3s ease;
+  transform: translateY(-12px);
+  box-shadow: var(--primary-hover) 0px 1px 3px,
+              var(--primary-hover) 0px 0px 0px 1px;
 }
 
 /* Icon Container */
-.icon {
-  font-size: 40px;
+.icon{
   margin-bottom: 16px;
-  color: #4b4b4b;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 50px;
+  height: 4rem;
+}
+.icon img {
+  
+  height: 4rem;
 }
 
 /* Title */
 .card-title {
-  font-size: 20px;
+  font-size: 1rem;
   font-weight: bold;
   color: var(--primary-hover);
   text-align: center;
