--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --light: #dbd5d5;
   --white: #e2e2e2;
   --text: #958889;
+  --background: #ffffff;
 ;
 
 
@@ -135,17 +136,16 @@
   box-sizing: border-box;
 }
 
-body,
-html {
+html, body {
   width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
-  font-family: "Arial", sans-serif;
   background: var(--white);
+  font-family: "Arial", sans-serif;
 }
+
 
 /* App Container Grid */
 .app-container {
