--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+html, body, :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -11,6 +11,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -22,13 +26,6 @@ a:hover {
   color: var(--secondary);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
 
 h1 {
   font-size: 3.2em;
